# cerebro

./: .gitignore  AGENTS.md  ARCHITECTURE_BOUNDARIES.md  CORE_CONTRACT.md  EXTENSION_MODEL.md  README.md  RUNTIME_SPEC.md  SCHEMA_EVOLUTION.md  pyproject.toml
adapters/: __init__.py
cli/: __init__.py  __main__.py  main.py  output.py  project_dashboard.py  project_registry.py  project_root.py  worktree_registry.py
core/: __init__.py  action_identity.py  action_runtime.py  agent_runtime.py  command_sandbox.py  decision_runtime.py  digests.py  discipline_runtime.py  domain_input_adapter.py  event_reducer.py  execution_policy.py  material_scope.py  memory_runtime.py  read_models.py  replay_model.py  runtime_event_window.py  runtime_ids.py  runtime_manager_policy.py  runtime_manager_store.py  schema.py  schema_policy.py  session_backend.py  state_digest.py  state_read_model_service.py  state_retention_service.py  state_runtime_lock_service.py  state_session_artifacts_service.py  state_store.py  store_protocols.py  success_memory.py  transition_journal.py  validation.py  verification_runtime.py  windows_credential_store.py  work_profile.py  workspace_paths.py
docs/: AGENT_PROTOCOL.md  AGENT_ROLES.md  EXTENSION_GUIDELINES.md  FREEZE_POLICY.md  INTEGRATION_SURFACE.md  LEGACY_REUSE_MAP.md  REAL_OPERATION_REPORT.md  ROBUSTNESS_BASELINE.md  WORKSTREAM_BOARD.md
experiments/: __init__.py  conftest.py  lifecycle.toml
extensions/: README.md  __init__.py  _support.py
tests/: __init__.py  gate_runner.py  runtime_fixtures.py  test_action_identity.py  test_action_runtime.py  (+55 more)
(+729 files in other folders)
