[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cerebro-local-checkpoint"
version = "0.1.0"
description = "Local context checkpoint CLI for agent-assisted execution."
requires-python = ">=3.11"
dependencies = []

[project.scripts]
cerebro = "cli.main:main"

[tool.setuptools]
packages = ["cli", "cli.commands", "core", "extensions", "extensions.handoff_export"]
